# FOMC

./: .gitignore  MANIFEST.in  README.md  check_database.py  fomc_data.db  process_all_indicators.py  pyproject.toml  requirements.txt  setup.cfg  setup_categories.py  sitecustomize.py  update_database.py
apps/: __init__.py
apps/web/: __init__.py  main.py
content/fed101/studio/: llm_module.md  reports.md  rules.md
data/: collect_economic_data_from_excel.py  rate_limited_fred_api.py
data/charts/: nonfarm_jobs_chart.py
database/: models.py
docs/: ConsumerPriceIndex.md  PROJECT_COMPASS.md  US Economic Indicators with FRED Codes.xlsx  cpi_weights.csv  development.md
references/: README.md
reports/: deepseek_client.py  report_generator.py
src/fomc/: __init__.py
src/fomc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fomc/apps/cli/: __init__.py  init_database.py  process_all_indicators.py  update_fred_urls.py
src/fomc/apps/flaskapp/: __init__.py  app.py
src/fomc/apps/web/: __init__.py  backend.py  main.py
src/fomc/config/: __init__.py  paths.py  settings.py
src/fomc/data/database/: connection.py
src/fomc/data/indicators/: category_manager.py  data_updater.py  indicator_sync_pipeline.py  rate_limited_fred_api.py
src/fomc/data/macro_events/: __init__.py  event_processing.py  llm_client.py  month_service.py
src/fomc/data/modeling/: __init__.py  (+2 more)
src/fomc/infra/: __init__.py  db.py
src/fomc/reports/: deepseek_client.py
src/fomc/rules/: __init__.py  taylor_rule.py
webapp/: app.py  fomc_data.db
webapp/templates/: index.html
(+14 files in other folders)
