[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fomc"
version = "0.1.0"
description = "FOMC research toolkit (data, reports, macro events, web portal)"
requires-python = ">=3.10"
authors = [{ name = "FOMC Team" }]
dependencies = []

