[metadata]
name = fomc
version = 0.1.0
description = FOMC research toolkit (data, reports, macro events, web portal)
license = MIT

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.10

[options.packages.find]
where = src

[options.package_data]
fomc = py.typed
fomc.apps.web.templates = *.html
fomc.apps.web.static = *.css *.js *.png *.svg
fomc.apps.flaskapp.templates = *.html

